# blockchain

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
app/: __init__.py  cli.py  config.py  mempool.py  runtime.py
app/api/: __init__.py  cli.py  main.py
app/blockchain/: __init__.py  blockchain.py
app/network/: __init__.py  consumer.py  producer.py  topics.py
app/voting/: app_desktop.py  core.py
blockchain/: blockchain.py
src/votacao_assinaturas/: app_desktop.py  core.py
tests/: __init__.py  test_monitor_alertas.py
