[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = "Votação em blockchain com assinaturas cegas."
authors = ["Alice Victorino, Maria Luiza Melo, Mateus Figueredo"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = { extras = ["standard"], version = "^0.135.3" }
uvicorn = "^0.44.0"
kafka-python = "^2.3.0"
requests = "^2.33.1"
pycryptodome = "^3.23.0"
customtkinter = "^5.2.2"

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.24"

[tool.poetry.scripts]
urna = "app.voting.app_desktop:main"
api = "app.api.cli:main"

[tool.fastapi]
entrypoint = "app.api.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
